feat: Integrate Alembic for database migrations
This commit introduces Alembic to manage database schema migrations.

- Adds `alembic` and the synchronous driver `psycopg2-binary` to the project dependencies.
- Updates the configuration to provide separate synchronous (for Alembic) and asynchronous (for the application) database connection URLs.
- Exposes the PostgreSQL port in `docker-compose.yml` to allow running migration commands from the host against the containerized database.
- Includes the initial Alembic environment setup (`alembic.ini` and `alembic/` directory).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
   # Сервис базы данных PostgreSQL
   db:
     image: postgres:15-alpine # Используем готовый официальный образ Postgres
+    ports:
+      - "5432:5432" # Пробрасываем порт 5432 из контейнера на наш компьютер
     volumes:
       # Сохраняем данные БД между перезапусками контейнера
       - postgres_data:/var/lib/postgresql/data/
