feat: Implement user registration and authentication
This commit introduces the foundational framework for user authentication and registration.

- Adds a new authentication router at `/api/v1/auth` to handle user-related endpoints.
- Creates the necessary modules for security (password hashing), user schemas (Pydantic models), and a service layer for business logic.
- Implements a `get_db_session` FastAPI dependency to provide database sessions to endpoints.
- Adds `pydantic[email]` to requirements for user email validation.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@
 fastapi
 uvicorn[standard]
 
+# Pydantic с поддержкой валидации email
+pydantic[email]
+
 # База данных
 sqlalchemy[asyncio]
 asyncpg
