feat: Implement JWT authentication and login endpoint
This commit introduces a complete authentication flow using JSON Web Tokens (JWT). Users can now log in with their email and password to receive an access token for authenticating subsequent requests.

Key changes:
- Add a `/login` endpoint that accepts `OAuth2PasswordRequestForm` data.
- Implement an `authenticate_user` service to verify credentials against the database.
- Add a `create_access_token` utility in `security.py` to generate signed JWTs with an expiration time.
- Introduce JWT-related settings (`SECRET_KEY`, `ALGORITHM`, `EXPIRE_MINUTES`) in `config.py`.
- Define a `Token` schema for the login response.
- Add `python-jose` and `python-multipart` to dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@ pydantic-settings
 
 # Работа с паролями
 passlib[bcrypt]
+python-jose[cryptography]
 
 # Миграции базы данных
 alembic
+
+python-multipart
